# PacketHandling

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  generate_stub.py  libary.json  library.properties  pyproject.toml
bindings/: packet_handler.cpp  pybindings.cpp
include/: BasePacket.h  PacketHandler.h
include/packets/: DataPacket.h  NoContentPacket.h  OneArgPacket.h  PacketDefinition.h  PingPacket.h  PongPacket.h
include/utils/: CRC.h  PacketDispatcher.h  PacketUtility.h
packet_handler/: __init__.py
src/: PacketHandler.cpp
src/packets/: DataPacket.cpp  NoContentPacket.cpp  OneArgPacket.cpp  PingPacket.cpp  PongPacket.cpp
src/utils/: PacketDispatcher.cpp  PacketUtility.cpp
